--- a/data/machine_vars.yaml
+++ b/data/machine_vars.yaml
@@ -1,12 +1,12 @@
-difficulty_night:
+difficulty_extraball1:
   expire: null
-  value: 76
-difficulty_villager:
+  value: 6
+difficulty_extraball2:
   expire: null
-  value: 21
-game_mode:
+  value: 6
+difficulty_tools:
   expire: null
-  value: NORMAL
-game_mode_display:
+  value: 4
+game_num_players:
   expire: null
-  value: Normal Mode
+  value: 1
